frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - myapp.com
    secretName: my-tls-secret
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
